# iracing-data-api

./: .eslintrc  .gitignore  .gitmodules  .npmrc  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  tsup.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: api-publish.yml  ci.yml  cli-build-executables.yml  cli-publish.yml  oauth-client-publish.yml  publish-on-tag.yml  release.yml  sdk-publish.yml  sdk-server-publish.yml
apps/driver-lookup/: index.ts  package.json  sea-config.json  tsconfig.build.json
apps/race-events/: .env.template  README.md  package.json
apps/sync-car-assets-cli/: .env.template  README.md  package.json  sea-config.json  tsconfig.build.json
apps/sync-track-assets-cli/: README.md  package.json  sea-config.json
crates/iracing-data-api-client/: .openapi-generator-ignore  Cargo.toml  README.md
docs/: RELEASING.md
examples/: README.md
examples/ftr-events-caution-helper/: index.js  index.ts  package.json  tsconfig.json
examples/iracing-api-proxy/: .env.template  README.md  package.json
examples/iracing-proxy-api-example/: .env.template  package.json
openapi/: iracing-oauth.json  iracing.json  oauth.json
patches/: oauth4webapi@3.7.0.patch
scripts/: openapi-generator-axios.sh  openapi-generator-fetch.sh  openapi-generator-rust-post-process.sh  openapi-generator-rust.sh  openapi-generator-ts-post-process.sh  protoc.mjs  protoc.sh
services/: README.md
tsconfig/: base.json  node.json
(+190 files in other folders)
